--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -11,28 +11,28 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
     <title>Frontend Mentor | QR code component</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="main">
+    <div class="container">
       <div class="card">
-        <img src="./images/image-qr-code.png" alt="" srcset="" />
-        <p class="p1"><strong> your front-end skills by building projects</strong></p>
-        
-        <p class="p2">
-          Scan the QR code to visit Frontend Mentor and take your coding skills
-          to the next level
-        </p>
+        <img src="./images/image-qr-code.png" alt="image-qr-code.png" />
+        <div class="image-info">
+          <h2>Impove your front-end skills by building projects</h2>
+
+          <p>
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
       </div>
     </div>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://www.linkedin.com/in/tshegofatso-motlhakane-905600233/">Tshegofatso Motlhakane</a>.
-    </div>
+    <footer>
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="https://www.linkedin.com/in/tshegofatso-motlhakane-905600233/">Tshego</a>.
+      </p>
+    </footer>
   </body>
 </html>
